# parsec-class

./: .travis.yml  LICENSE  README.md  parsec-class.cabal
.github/workflows/: haskell-ci.yml
src/Text/Parsec/: Class.hs
src/Text/Parsec/Class/: Orphans.hs
